css/style.css
@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
@import url( "https://fonts.google.com/specimen/Balthazar?query=baltha");
@import url('https://fonts.googleapis.com/css2?family=Balthazar&family=Cookie&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/********** Template CSS **********/
:root {
  --primary: BROWN;
  --light: BLACK;
}

/*** Spinner ***/
#spinner {
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.5s ease-out, visibility 0s linear 0.5s;
  z-index: 99999;
}

#spinner.show {
  transition: opacity 0.5s ease-out, visibility 0s linear 0s;
  visibility: visible;
  opacity: 1;
}

/*** Navbar ***/

.navbarcustom {
  background-color: #ffffff;
  font-family: "Roboto";
  font-size: 16px;
  font-weight: 700;
  line-height: 20.83px;
}

.collapse {
  display: inline-flex;
  margin-right: 0px;
  align-content: flex-end;
}

.navbar .navbar-nav .nav-link {
  padding: 10px 15px 0px 15px;
  color: var(--light);
  outline: #111111;
  font-family: "Roboto";
  font-size: 16px;
}

.navbar .navbar-nav .nav-link:hover,
.navbar .navbar-nav .nav-link.active {
  color: var(--primary);
}

.navbar.fixed-top {
  padding-top: 10px;
  transition: 0.5s;
}
.navbar-nav {
  height: 40px;
}
.title {
  font-family: Cookie, sans-serif;
  color: #634036;
  font-size: 6vw;
  font-weight: 400;
}
.sub-title {
  font-weight: 500;
  font-size: 2vw;
}
.back-to-top {
  position: absolute;
  bottom: 25px;
  right: 50px;
  background-color: #fff;
}
@media (max-width: 991.98px) {
  .navbar .navbar-nav {
    margin-top: 10px;
    border-top: 1px solid #ffffff;
  }

  .navbar .navbar-nav .nav-link {
    padding: 10px 0;
    background-color: #ffffff;
  }
}
.menu-button {
  height: 41px;
  width: 112px;
  background-color: #634036 !important;
  color: #ffffff !important;
  padding-top: 5px !important;
  outline: none;
}
.menu-icon {
  width: 17px;
  margin-left: 8px;
}
.services {
  background-color: #634036;
}

.services span {
  font-weight: 500;
  font-style: 20px;
  line-height: 26px;
  color: #fff;
}
.services p {
  margin-top: 6px;
  font-weight: 500;
  font-style: 16px;
  line-height: 20px;
  color: #ffffff80;
}
.menu-button:hover,
.menu-button:focus {
  box-shadow: none !important ;
  background-color: #6d5048 !important;
}
@media (min-width: 992px) {
  .navbar .nav-item .dropdown-menu {
    display: block;
    visibility: hidden;
    top: 100%;
    transform: rotateX(-75deg);
    transform-origin: 0% 0%;
    transition: 0.5s;
    opacity: 0;
  }

  .navbar .nav-item:hover .dropdown-menu {
    transform: rotateX(0deg);
    visibility: visible;
    transition: 0.5s;
    opacity: 1;
  }
}
.hero-bg{
  min-height: 500px;
}
.story {
  font-family: Balthazar;
  font-size: 64px;
  font-weight: 400;
  line-height: 70.98px;
  text-align: center !important;
  color: #634036 !important;
}
.categoryList {
  margin-top: 20px;
  cursor: pointer;
}

.btnCategory {
  font-family: Cookie;
  font-size: 24px;
  font-weight: 400;
  text-align: center !important;
  color: white !important;
  background-color: #634036 !important;
  margin-right: 20px;
  border-radius: 25px;
}
.content {
  align-content: end;
  font-size: 20px;
  font-weight: 400 !important;
  line-height: 26.04px;
  text-align: left;
  opacity: 0px;

}
h4 {
  font-family: "Cookie";
  color: #ffffff;
  font-family: Cookie;
  font-size: 36px;
  font-weight: 400;
  line-height: 39.92px;
  background-color: #634036;
}

/* Menu */
.menu-container {
  background-color: #fffaef;
  padding-bottom: 120px;
}

.card {
  border-radius: 12px;
  height: 400px;
  max-width: 340px;
}
.card img {
  height: 250px;
  /* width: 312px; */
}

.card-title {
  font-family: "Roboto";
  font-size: 20px;
  font-weight: 600;
  line-height: 26px;
  color: #000000;
  text-align: left;
}
.card-text{
  text-align: left;
}

/*** Footer ***/

.footer .btn.btn-link {
  display: block;
  margin-bottom: 5px;
  padding: 0;
  text-align: left;
  color: var(--light);
  font-weight: normal;
  text-transform: capitalize;
  transition: 0.3s;
  background-color: #634036;
}

.footer .btn.btn-link::before {
  position: relative;
  content: "\f105";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  color: var(--light);
  margin-right: 10px;
}

.footer .btn.btn-link:hover {
  color: var(--primary);
  letter-spacing: 1px;
  box-shadow: none;
}
.btnCategory {
  font-family: "Roboto"!important;
  font-size: 22px;
  font-weight: 400;
  text-align: center !important;
  color: white !important;
  background-color: #634036 !important;
  margin-right: 20px;
  border-radius: 25px;
}
.maincontent{
  
    font-family: balthazar;
    font-size: x-large;

}
/* Style for additional text container
.navbar-additional{
  display: none !important; /* Initially hide the additional text */
/* } */

/* .navbar-additional.nav-item:hover,
.navbar-additional.active{
  display:initial; */
  /* Show additional text container when active */
/* } */

/* Style for additional text */
.navbar-additional {
  padding: 10px;
  padding-left: 90px;
  margin-left: 400px;
  vertical-align: middle;
  -moz-box-align: center;
}
.back-to-top {
  position: fixed;
  background-color: #6d5048;

}

.back-to-top i {
  color: white;
}
.key2{
 padding-right: 20px;
 padding-left: 10px;
}

